<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Day">

    <LinearLayout
        android:layout_width="328dp"
        android:layout_height="499dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Today is......"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="5dp"
            android:text="@string/monday" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/tuesday" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/wednesday" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/thursday" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/friday" />

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/satuday" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>